--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,10 +20,10 @@ p {
 a {
   text-decoration: none;
   color: white;
+  transition: transform .3s, color 0.2s;
 }
 
 a:hover {
-  transition: transform .3s;
   transform: translate(0, -1px);
   text-decoration: none;
   color: white;
@@ -252,6 +252,7 @@ body {
 
 #projects .content-wrapper {
   width: 900px;
+  padding: 0 40px;
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
@@ -261,7 +262,7 @@ body {
 }
 
 #projects a {
-  width: 445px;
+  width: 49.5%;
   margin-bottom: 10px;
 }
 
@@ -275,8 +276,31 @@ body {
 }
 
 @media (max-width: 900px) {
-  #projects {
-    display: none;
+  #projects .content-wrapper {
+    width: 100%;
+  }
+  
+  #projects a {
+    margin-bottom: 1%;
+  }
+
+  #projects a:hover {
+    transform: scale(1.1)
+  }
+}
+
+@media (max-width: 600px) {
+  #projects .content-wrapper {
+    padding: 0 10px;
+    justify-content: center;
+  }
+
+  #projects a {
+    width: 90%;
+  }
+
+  #projects a:hover {
+    transform: scale(1.1)
   }
 }
 
