--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -249,11 +249,17 @@ body {
 }
 
 #projects h2 {
+  text-align: center;
+  width: 100%;
   padding: 20px 0;
 }
 
 #projects h2::before, #projects h2::after {
-  width: 10px;
+  vertical-align: middle;
+  display: inline-block;
+  content: "";
+  width: 25%;
+  margin: 0 16px;
   height: 2px;
   background-color: white;
 }
@@ -265,20 +271,16 @@ body {
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: space-between;
-  /* align-items: center;
-  justify-content: center; */
 }
 
 #projects a {
   width: 49.5%;
   margin-bottom: 10px;
-  /* z-index: 1; */
   transition: transform 0.2s ease-in-out;
 }
 
 #projects a:hover {
   opacity: 1;
-  /* z-index: 2; */
   transform: scale(1.2)
 }
 
@@ -306,12 +308,12 @@ body {
     justify-content: center;
   }
 
-  #projects a {
-    width: 90%;
+  #projects h2::before, #projects h2::after {
+    width: 10%;
   }
 
-  #projects a:hover {
-    transform: scale(1.1)
+  #projects a {
+    width: 90%;
   }
 }
 
