--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -57,7 +57,7 @@ body {
   height: 50px!important;
 
   font-weight: 800;
-  z-index: 1;
+  z-index: 2;
 }
 
   .bg-dark {
@@ -248,6 +248,15 @@ body {
   padding: 40px 0;
 }
 
+#projects .content-wrapper {
+  width: 900px;
+  padding: 0 40px;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
 #projects h2 {
   text-align: center;
   width: 100%;
@@ -264,24 +273,61 @@ body {
   background-color: white;
 }
 
-#projects .content-wrapper {
-  width: 900px;
-  padding: 0 40px;
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  justify-content: space-between;
+#projects .project {
+  position: relative;
+  width: 49%;
+  margin-bottom: 15px;
+  transition: transform 0.2s ease-in-out;
 }
 
-#projects a {
-  width: 49.5%;
-  margin-bottom: 10px;
-  transition: transform 0.2s ease-in-out;
+#projects .project:hover {
+  opacity: 1;
+  z-index: 1;
+  transform: scale(1.1)
 }
 
 #projects a:hover {
   opacity: 1;
-  transform: scale(1.2)
+}
+
+#projects .project img {
+  width: 100%;
+  /* object-fit: cover; */
+  /* height: 300px; */
+}
+
+#projects .project-text {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+
+  width: 90%;
+  height: 90%;
+  text-align: center;
+
+  font-size: 0.85em;
+}
+
+#projects .project-text h3 {
+  margin-bottom: 8px;
+}
+
+#projects .project-text p {
+  margin: 0;
+  opacity: 0;
+  max-height: 0;
+  transition: opacity 0.4s ease-in-out,
+              max-height 0.5s ease-in-out;
+}
+
+#projects .project:hover .project-text p {
+  opacity: 1;
+  max-height: 200em;
 }
 
 #projects a img {
@@ -308,11 +354,11 @@ body {
     justify-content: center;
   }
 
-  #projects h2::before, #projects h2::after {
+  #projects .project h2::before, #projects h2::after {
     width: 10%;
   }
 
-  #projects a {
+  #projects .project {
     width: 90%;
   }
 }
