make footer stand out a bit more

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -267,7 +267,7 @@ body {
   vertical-align: middle;
   display: inline-block;
   content: "";
-  width: 25%;
+  width: 40px;
   margin: 0 16px;
   height: 2px;
   background-color: white;
@@ -354,10 +354,6 @@ body {
     justify-content: center;
   }
 
-  #projects .project h2::before, #projects h2::after {
-    width: 10%;
-  }
-
   #projects .project {
     width: 90%;
   }
@@ -438,25 +434,26 @@ body {
   align-items: center;
   justify-content: space-between;
   
-  height: 100px;
+  height: 125px;
   padding: 50px;
   background-color: rgba(38, 51, 51, 0.85);
-  color: rgba(255, 255, 255, 0.5);
+  color: rgba(255, 255, 255, 0.75);
 }
 
   #footer .icons {
     display: flex;
-    width: 170px;
+    width: 200px;
     justify-content: space-between;
   }
 
     #footer .icons a {
-      font-size: 1.5em;
-      color: rgba(255, 255, 255, 0.5);
+      font-size: 1.75em;
+      color: rgba(255, 255, 255, 0.75);
     }
 
     #footer .icons a:hover {
-      text-decoration: none;
+      transform: scale(1.2);
+      opacity: 1;
       color: white;
     }
 
