--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -286,19 +286,24 @@ body {
   background: none;
   color: white;
   letter-spacing: 0.10em;
-  opacity: 0.75;
+  opacity: 0.70;
 
   border-width: 2px;
   border-color: white;
+  transition: opacity 0.2s;
 }
 
-#projects .filters .btn:hover,
+#projects .filters .btn:hover {
+  opacity: 0.8;
+}
+
 #projects .filters .btn.active {
   opacity: 1;
 }
 
 #projects .project {
   display: none;
+  transform: scale(0);
   position: relative;
   width: 49%;
   margin-bottom: 15px;
@@ -307,6 +312,7 @@ body {
 
 #projects .project.show {
   display: block;
+  transform: scale(1);
 }
 
 #projects .project:hover {
@@ -422,7 +428,7 @@ body {
 
     .thankyou-buttons a:hover {
       color: white;
-      opacity: 0.7;
+      opacity: 0.8;
     }
 
   @media (max-width: 768px) {
