--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -243,11 +243,13 @@ body {
 #projects {
   display: flex;
   flex-direction: column;
-  align-items: center;
+  /* align-items: center; */
   
   background-color: #2e3842;
   min-height: 501px;
   padding: 40px 0;
+
+  transition: height 0.2s;
 }
 
 #projects .content-wrapper {
@@ -280,6 +282,8 @@ body {
   text-align: center;
   padding-bottom: 20px;
   margin: 0 0 16px 0;
+
+  cursor: default;
 }
 
 #projects .filters .btn-filter {
@@ -302,27 +306,16 @@ body {
 }
 
 #projects .project {
-  display: none;
-  transform: scale(0);
   position: relative;
   width: 49%;
   margin-bottom: 15px;
   transition: transform 0.2s ease-in-out;
 }
 
-#projects .project.show {
-  display: block;
-  transform: scale(1);
-}
-
 #projects .project:hover {
   opacity: 1;
   z-index: 1;
   transform: scale(1.1)
-}
-
-#projects a:hover {
-  opacity: 1;
 }
 
 #projects .project img {
