dont change opacity for projects

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -315,9 +315,12 @@ body {
 }
 
 #projects .project:hover {
-  opacity: 1;
   z-index: 1;
   transform: scale(1.1)
+}
+
+#projects .project a:hover {
+  opacity: 1;
 }
 
 #projects .project img {
