--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -253,12 +253,11 @@ body {
 }
 
 #projects .content-wrapper {
-  width: 900px;
   padding: 0 40px;
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  justify-content: space-between;
+  /* justify-content: space-between; */
 }
 
 #projects h2 {
@@ -307,64 +306,85 @@ body {
   opacity: 1;
 }
 
-#projects .project {
-  position: relative;
-  width: 49%;
-  margin-bottom: 15px;
-  transition: transform 0.2s ease-in-out;
+#projects h3 {
+  letter-spacing: 0.20em;
+  font-size: 1em;
+  margin: 0;
 }
 
 #projects .project:hover {
-  z-index: 1;
-  transform: scale(1.1)
+  transform: translateY(-5px);
 }
 
-#projects .project a:hover {
-  opacity: 1;
+#projects .project {
+  position: relative;
+  width: 32%;
+  margin: 0 0.5% 11px 0.5%;
+  transition: transform 0.1s ease-in-out;
+  
+  background-color: rgb(235, 235, 235);
+  border-radius: 7px;
+  color: #2e3842;
+  font-size: 1.15em;
 }
 
-#projects .project img {
+#projects .project-image {
+  position: relative;
+}
+
+#projects .project-image img {
+  border-radius: 6px 6px 0 0;
   width: 100%;
-  /* object-fit: cover; */
-  /* height: 300px; */
+}
+
+#projects .project-header {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+
+  padding: 10px 15px;
+  height: 64px;
+}
+
+#projects .project:hover .project-text{
+  opacity: 1;
 }
 
 #projects .project-text {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
+  opacity: 0;
+  transition: 0.5s opacity;
 
   position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  z-index: 1;
+  height: 100%;
+  padding: 10px 20px;
 
-  width: 90%;
-  height: 90%;
+  background-color: #1d242a3f;
+  border-radius: 5px 5px 0 0;
+
   text-align: center;
-
-  font-size: 0.85em;
+  color: white;
+  font-size: 0.8em;
 }
 
-#projects .project-text h3 {
-  margin-bottom: 8px;
+#projects .project a.btn {
+  /* font-size: 0.25em; */
+  border-style: solid;
+  border-width: 2px;
+  border-color: white;
+  font-size: 0.75em;
+  /* letter-spacing: 0.1em; */
+  padding-left: 17px;
 }
 
-#projects .project-text p {
-  margin: 0;
-  opacity: 0;
-  max-height: 0;
-  transition: opacity 0.4s ease-in-out,
-              max-height 0.5s ease-in-out;
-}
-
-#projects .project:hover .project-text p {
-  opacity: 1;
-  max-height: 200em;
-}
-
-#projects a img {
-  width: 100%;
+#projects .project a.btn:hover {
+  transform: none;
+  opacity: 0.8;
 }
 
 @media (max-width: 900px) {
