--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -361,6 +361,7 @@ body {
   align-items: center;
   justify-content: center;
   z-index: 1;
+  width: 100%;
   height: 100%;
   padding: 10px 20px;
 
@@ -387,21 +388,13 @@ body {
   opacity: 0.8;
 }
 
-@media (max-width: 900px) {
-  #projects .content-wrapper {
-    width: 100%;
-  }
-  
-  #projects a {
-    margin-bottom: 1%;
-  }
-
-  #projects a:hover {
-    transform: scale(1.1)
+@media (max-width: 1000px) {
+  #projects .project {
+    width: 49%;
   }
 }
 
-@media (max-width: 600px) {
+@media (max-width: 650px) {
   #projects .content-wrapper {
     padding: 0 10px;
     justify-content: center;
