--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -346,6 +346,9 @@ body {
   padding: 10px 15px;
   height: 64px;
 }
+/* #projects .project-info {
+  margin: 10px 0;
+} */
 
 #projects .project:hover .project-text{
   opacity: 1;
@@ -385,7 +388,7 @@ body {
 
 #projects .project-tools li {
   display: inline;
-  margin: 0 5px 0 0;
+  /* margin: 0 5px 0 0; */
 }
 
 #projects .project a.btn {
