--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html>
+<html lang="en">
   <head>
     <meta charset="utl-8">
     <title>
@@ -10,14 +10,25 @@
       {% endif %}
     </title>
     <meta name="description" content="Ricky Kuang is a software engineer living in Los Angeles, CA">
-    <link rel="stylesheet" href="/assets/css/styles.css">
+    <meta name="author" content="Ricky Kuang">
+
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=DM+Sans&family=DM+Serif+Text&display=swap">
+
+    <link rel="stylesheet" href="/assets/css/normalize.css">
+    <link rel="stylesheet" href="/assets/css/skeleton.css">
+    <link rel="stylesheet" href="/assets/css/styles.css">
+
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg">
+    <link rel="alternate icon" href="/favicon.ico">
+    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#ff8a01">
     {% feed_meta %}
     {% seo %}
   </head>
   <body>
     {% include navigation.html %}
-    <div class="content">
+    <div class="content container">
       {{ content }}
     </div>
   </body>
