remove skeleton responsive css

--- a/_sass/_nav.scss
+++ b/_sass/_nav.scss
@@ -37,7 +37,7 @@
     text-decoration: none;
     opacity: 0.8;
     border-bottom: 1px solid transparent;
-    padding-bottom: 0.02em;
+    padding-bottom: 4px;
     transition: all .2s ease-in-out;
 
     &.current, &:hover {
