--- a/_sass/_main.scss
+++ b/_sass/_main.scss
@@ -19,13 +19,14 @@ $padding-nav-links: 32px;
 
 html {
   background-color: $color-background;
+  font-size: 16px;
 }
 
 body {
+  margin: 0;
   font-family: "DM Sans", sans-serif;
+  font-size: 1.5em;
   color: $color-text;
-  width: 100%;
-  // margin: 0 $gutter;
 }
 
 .content {
