update some includes, including profile description. added placeholders for some projects. updated css.

--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,4 +1,4 @@
-<div class="navbar">
+<header class="container navbar">
   <nav>
     <a class="navbar-brand" href="/">
       {% include monogram-bold-short.svg %}
@@ -23,4 +23,4 @@
       {% endfor %}
     </ul>
   </nav>
-</div>
+</header>
