--- a/_includes/introduction.html
+++ b/_includes/introduction.html
@@ -1,3 +1,3 @@
-<p>
-  Ricky&nbsp;Kuang is a software developer living in Los&nbsp;Angeles,&nbsp;CA.
-</p>
+<h1 class="projects-intro">
+  Ricky&nbsp;Kuang is a software&nbsp;developer living in Los&nbsp;Angeles,&nbsp;CA.
+</h1>
