--- a/_includes/profile.html
+++ b/_includes/profile.html
@@ -1,10 +1,12 @@
 
 <p>
-  Hi, I'm Ricky Kuang, a software engineer, particularly focused on _.
+  Hi, I'm Ricky Kuang, a software engineer based in Los Angeles, CA.
 </p>
 
 <p>
-  I currently work as a Developer III at 
+  I currently work as a <strong>Developer III</strong> at 
   <a href="https://www.novacoast.com/">Novacoast, Inc.</a>, an IT Professional
-  Services and Product Development company.
+  Services and Product Development company. At Novacoast, I was the sole
+  developer on our internal automation projects, a versatile technical
+  consultant in the field, and August 2020 Developer of the Month!
 </p>
