--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,11 +1,13 @@
 ---
 layout: default
 ---
-<div>
-    <h1>{{ page.title }}</h1>
-    <p>
+<a class="blog-return" href="/blog/"><< Back to Posts</a>
+<div class="blog-article">
+    <h1 class="blog-title">{{ page.title }}</h1>
+    <p class="blog-date">
         {{ page.date | date: "%B %d, %Y"  }}
     </p>
-    
-    {{ content }}
+    <div class="blog-content">
+        {{ content }}
+    </div>
 </div>
