--- a/_sass/_nav.scss
+++ b/_sass/_nav.scss
@@ -1,3 +1,4 @@
+$navbar-brand-size: 48px;
 
 .navbar {
   font-family: "DM Sans", sans-serif;
@@ -8,13 +9,20 @@
     justify-content: space-between;
     align-items: center;
     height: 100px;
+    font-size: 1.25rem;
   }
 
   .navbar-brand {
-    width: 48px;
+    height: $navbar-brand-size;
+    width: $navbar-brand-size;
     stroke: $color-primary;
     fill: $color-primary;
-    opacity: 1 !important;
+    padding-bottom: 0;
+    // opacity: 1 !important;
+
+    &:hover {
+      border-bottom-color: transparent;
+    }
   }
 
   ul {
@@ -38,11 +46,15 @@
     opacity: 0.8;
     border-bottom: 1px solid transparent;
     padding-bottom: 4px;
-    transition: all .2s ease-in-out;
+    transition: opacity .2s ease-in-out, border-bottom-color .2s ease-in-out;
 
     &.current, &:hover {
       opacity: 1;
       border-bottom-color: $color-tertiary;
     }
   }
+
+  // &.container {
+  //   max-width: 1120px;
+  // }
 }
