add footer. change project.page to project.link

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,5 +29,8 @@
     <div class="content container">
       {{ content }}
     </div>
+    <footer class="footer container">
+      &copy; Ricky Kuang
+    </footer>
   </body>
 </html>
