--- a/_includes/profile.html
+++ b/_includes/profile.html
@@ -1,12 +1,21 @@
 
 <p>
-  Hi, I'm Ricky Kuang, a software engineer based in Los Angeles, CA.
+  Hi, I'm Ricky Kuang, a software engineer based in Los Angeles, CA. 
 </p>
 
 <p>
-  I currently work as a <strong>Developer III</strong> at 
+  My goal is to make products that make people happy.
+</p>
+
+<p>
+  I currently work as a <strong>Software Developer</strong> at 
   <a href="https://www.novacoast.com/">Novacoast, Inc.</a>, an IT Professional
-  Services and Product Development company. At Novacoast, I was the sole
+  Services and Product Development company. At Novacoast, I am the sole
   developer on our internal automation projects, a versatile technical
   consultant in the field, and August 2020 Developer of the Month!
+</p>
+
+<p>
+  When I'm not in front of a computer, you'll find me practicing calisthenics,
+  trying new recipes in the kitchen, or drawing in my sketch pad.
 </p>
