--- a/_sass/_main.scss
+++ b/_sass/_main.scss
@@ -17,19 +17,26 @@ $padding-nav-links: 32px;
   background: RGBA($color-tertiary-rgb, 0.3);
 }
 
+html, body {
+  height: 100%;
+  margin: 0;
+}
+
 html {
   background-color: $color-background;
   font-size: 16px;
 }
 
 body {
-  margin: 0;
   font-family: "DM Sans", sans-serif;
   font-size: 1.125em;
   color: $color-text;
+  display: flex;
+  flex-direction: column;
 }
 
 .content {
+  flex: 1 0 auto;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -45,6 +52,10 @@ body {
       border-bottom-color: $color-action;
     }
   }
+}
+
+footer {
+  flex-shrink: 0;
 }
 
 .projects-intro {
@@ -66,7 +77,7 @@ body {
   column-gap: 32px;
   justify-content: center;
   .project {
-    background-color: red;
+    background-color: $color-tertiary;
     width: 300px;
     height: 248px;
   }
