--- a/_sass/_main.scss
+++ b/_sass/_main.scss
@@ -10,6 +10,7 @@ $color-tertiary-rgb: (255, 226, 112);
 $color-action: #ffcc00;
 $color-action-rgb: 255, 204, 0;
 $color-text: RGBA($color-primary-rgb, .95);
+$color-text-sunken: RGBA($color-primary-rgb, .7);
 $padding-nav-links: 32px;
 // $gutter: 48px;
 
