move branding to subfolder

--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,7 +1,7 @@
 <header class="container navbar">
   <nav>
     <a class="navbar-brand" href="/">
-      {% include monogram-bold-short.svg %}
+      {% include branding/monogram-bold-short.svg %}
     </a>
     <ul>
       {% for item in site.data.navigation %}
