--- a/_sass/_blog.scss
+++ b/_sass/_blog.scss
@@ -1,3 +1,11 @@
+.blog-empty {
+  text-align: center;
+  h1 {
+    font-size: 2.5rem;
+    font-family: "DM Serif Text", serif;
+  }
+}
+
 .blog-list {
   display: flex;
   flex-direction: column;
