--- a/_sass/_about.scss
+++ b/_sass/_about.scss
@@ -13,7 +13,7 @@
   height: 450px;
 
   .resume-card {
-    border-top: 2px solid $color-primary;
+    border-top: 2px solid $color-text-sunken;
     padding-left: 8px;
     width: 33%;
     margin: 0;
