add fix for Chrome CSS transition bug

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -32,5 +32,11 @@
     <footer class="footer container">
       &copy; Ricky Kuang
     </footer>
+    
+    <!-- 
+      Work around for Chrome CSS transition bug
+      https://stackoverflow.com/questions/14389566/stop-css-transition-from-firing-on-page-load
+    -->
+    <script> </script>
   </body>
 </html>
