add placeholder profile image. center footer text. fix profile text and image widths

--- a/_includes/profile.html
+++ b/_includes/profile.html
@@ -1,17 +1,21 @@
+<div class="profile">
+  <div class="profile-text">
+    <p>
+      Hi, I'm Ricky Kuang, a software engineer based in Los Angeles, CA.
+    </p>
 
-<p>
-  Hi, I'm Ricky Kuang, a software engineer based in Los Angeles, CA. 
-</p>
+    <p>
+      I currently work as a <strong>Software Developer</strong> at
+      <a href="https://www.novacoast.com/">Novacoast, Inc.</a>, an IT Professional
+      Services and Product Development company. At Novacoast, I am the lead
+      developer on our internal automation projects, a versatile technical
+      consultant in the field, and August 2020 Developer of the Month!
+    </p>
 
-<p>
-  I currently work as a <strong>Software Developer</strong> at 
-  <a href="https://www.novacoast.com/">Novacoast, Inc.</a>, an IT Professional
-  Services and Product Development company. At Novacoast, I am the lead
-  developer on our internal automation projects, a versatile technical
-  consultant in the field, and August 2020 Developer of the Month!
-</p>
-
-<p>
-  When I'm not in front of a computer, you'll find me practicing calisthenics,
-  trying new recipes in the kitchen, or drawing in my sketch pad.
-</p>
+    <p>
+      When I'm not in front of a computer, you'll find me practicing calisthenics,
+      trying new recipes in the kitchen, or drawing in my sketch pad.
+    </p>
+  </div>
+  <img src="https://content.fortune.com/wp-content/uploads/2019/01/boo.jpg">
+</div>
