--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,7 +29,7 @@
     <div class="content container">
       {{ content }}
     </div>
-    <footer class="footer container">
+    <footer>
       &copy; Ricky Kuang
     </footer>
     
