--- a/_sass/_about.scss
+++ b/_sass/_about.scss
@@ -1,6 +1,32 @@
+$resume-column-width: ($container-width - 56px) / 3;
+$profile-img-width: 360px;
+$profile-text-width: $container-width - $profile-img-width - 32px;
+
 .about {
   display: flex;
   flex-direction: column;
+  width: 100%
+}
+
+.profile {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  margin-bottom: 32px;
+  justify-content: space-between;
+
+  .profile-text {
+    max-width: $profile-text-width;
+    p {
+      margin-bottom: 2rem;
+    }
+  }
+
+  img {
+    flex-shrink: 1;
+    max-width: $profile-img-width;
+  }
 }
 
 .resume {
@@ -15,7 +41,7 @@
   .resume-card {
     border-top: 2px solid $color-text-sunken;
     padding-left: 8px;
-    width: 33%;
+    width: $resume-column-width;
     margin: 0;
     .resume-card-header {
       font-family: 'DM Serif Display', serif;
@@ -47,11 +73,12 @@
 }
 
 .about-site {
-  width: 60%;
+  width: 50%;
+  padding-left: 8px;
+  border-top: 2px solid $color-text-sunken;
   .about-site-header {
     font-family: "DM Serif Display", serif;
     font-size: 2.5rem;
-    border-top: 2px solid $color-text-sunken;
     margin-bottom: 16px;
   }
 }
