--- a/_sass/_main.scss
+++ b/_sass/_main.scss
@@ -12,7 +12,7 @@ $color-action-rgb: 255, 204, 0;
 $color-text: RGBA($color-primary-rgb, .95);
 $color-text-sunken: RGBA($color-primary-rgb, .7);
 $padding-nav-links: 32px;
-// $gutter: 48px;
+$container-width: 1040px;
 
 ::selection {
   background: RGBA($color-tertiary-rgb, 0.3);
@@ -57,6 +57,12 @@ body {
 
 footer {
   flex-shrink: 0;
+  margin-top: 32px;
+  height: 100px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  // background-color: #ffcc00;
 }
 
 .projects-intro {
@@ -85,5 +91,5 @@ footer {
 }
 
 .container {
-  max-width: 1040px;
+  max-width: $container-width;
 }
