--- a/_includes/profile.html
+++ b/_includes/profile.html
@@ -6,16 +6,17 @@
 
     <p>
       I currently work as a <strong>Software Developer</strong> at
-      <a href="https://www.novacoast.com/">Novacoast, Inc.</a>, an IT Professional
-      Services and Product Development company. At Novacoast, I am the lead
-      developer on our internal automation projects, a versatile technical
-      consultant in the field, and August 2020 Developer of the Month!
+      <a href="https://www.novacoast.com/">Novacoast, Inc.</a>, an IT
+      Professional Services and Product Development company. At Novacoast, I am
+      the lead developer on our internal automation projects, a versatile
+      technical consultant out in the field, and August 2020 Developer of the
+      Month!
     </p>
 
     <p>
-      When I'm not in front of a computer, you'll find me practicing calisthenics,
-      trying new recipes in the kitchen, or drawing in my sketch pad.
+      When I'm not in front of a computer, you'll find me doodling in my sketch
+      pad, practicing bodyweight fitness, or trekking the local hiking trails.
     </p>
   </div>
-  <img src="https://content.fortune.com/wp-content/uploads/2019/01/boo.jpg">
+  <img src="/assets/images/profile-img.png">
 </div>
