--- a/_sass/_main.scss
+++ b/_sass/_main.scss
@@ -79,14 +79,13 @@ footer {
 .projects {
   width: 100%;
   display: grid;
-  grid-template-columns: 300px 300px 300px;
+  grid-template-columns: repeat(3, 1fr);
   row-gap: 32px;
   column-gap: 32px;
   justify-content: center;
   .project {
     background-color: $color-tertiary;
-    width: 300px;
-    height: 248px;
+    height: 260px;
   }
 }
 
