--- a/_sass/_main.scss
+++ b/_sass/_main.scss
@@ -83,9 +83,55 @@ footer {
   row-gap: 32px;
   column-gap: 32px;
   justify-content: center;
-  .project {
-    background-color: $color-tertiary;
-    height: 260px;
+  .project-item {
+    h3 {
+      color: $color-text;
+      font-size: 1.4rem;
+    }
+    .project-details {
+      position: relative;
+      background-color: $color-tertiary;
+      height: 260px;
+      margin-bottom: 8px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      img {
+        position: absolute;
+        width: 100%;
+        height: auto;
+      }
+      p {
+        opacity: 0;
+        transition: opacity 0.3s ease-in-out;
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        margin: 0;
+
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+
+        background-color: $color-action;
+        color: $color-text;
+
+        span {
+          transform: translateY(24px);
+          transition: transform 0.3s ease-in-out;
+          padding: 8px 16px;
+        }
+      }
+    }
+    &:hover {
+      p {
+        opacity: 1;
+        span {
+          transform: none;
+        }
+      }
+    }
   }
 }
 
