--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -1,15 +1,14 @@
 ---
 layout: default
 ---
-<h1>{{ page.name }}</h1>
-<h2>{{ page.position }}</h2>
-
-{{ content }}
-
-<h2>Posts</h2>
-<ul>
-    {% assign filtered_posts = site.posts | where: 'author', page.short_name %}
-    {% for post in filtered_posts %}
-    {% include post-li.html %}
+<div class="project-detail">
+  <h1 class="project-detail-title">{{ page.name }}</h1>
+  <div class="project-detail-details">
+    {{ content }}
+  </div>
+  <ul>
+    {% for tag in page.tags %}
+    <li>{{tag}}</li>
     {% endfor %}
-</ul>
+  </ul>
+</div>
