--- a/_sass/_project.scss
+++ b/_sass/_project.scss
@@ -9,6 +9,7 @@ $thumbnail-height: 270px;
   row-gap: 32px;
   column-gap: 32px;
   justify-content: center;
+  padding-top: 32px;
   .project-list-item-link {
     .project-list-name {
       color: $color-text;
