--- a/_includes/profile.html
+++ b/_includes/profile.html
@@ -6,11 +6,11 @@
 
     <p>
       I currently work as a <strong>Software Developer</strong> at
-      <a href="https://www.novacoast.com/">Novacoast, Inc.</a>, an IT
-      Professional Services and Product Development company. At Novacoast, I am
-      the lead developer on our internal automation projects, a versatile
-      technical consultant out in the field, and August 2020 Developer of the
-      Month!
+      <a href="https://www.novacoast.com/" target="_blank"  rel="noopener
+      noreferrer">Novacoast, Inc.</a>, an IT Professional Services and Product
+      Development company. At Novacoast, I am the lead developer on our internal
+      automation projects, a versatile technical consultant out in the field,
+      and August 2020 Developer of the Month!
     </p>
 
     <p>
