--- a/_sass/_main.scss
+++ b/_sass/_main.scss
@@ -111,6 +111,7 @@ footer {
   display: flex;
   flex-direction: column;
   align-items: center;
+  text-align: center;
   p {
     margin: 0 0 12px 0;
   }
