add styling for tags, year, and view link

--- a/_sass/_project.scss
+++ b/_sass/_project.scss
@@ -70,4 +70,25 @@ $thumbnail-height: 270px;
     font-family: 'DM Serif Display', serif;
     font-size: 3.5rem;
   }
+  .project-detail-details {
+    display: flex;
+    flex-direction: row;
+    gap: 32px;
+    .project-detail-details-text {
+      flex: 4 1 0;
+    }
+    .project-detail-details-extras {
+      flex: 1 1 0;
+      h2 {
+        text-transform: uppercase;
+        font-size: 1rem;
+        letter-spacing: .06rem;
+        margin-bottom: 4px;
+        color: $color-text-sunken;
+      }
+      p {
+        margin-bottom: 24px;
+      }
+    }
+  }
 }
