--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -4,11 +4,19 @@ layout: default
 <div class="project-detail">
   <h1 class="project-detail-title">{{ page.name }}</h1>
   <div class="project-detail-details">
-    {{ content }}
+    <div class="project-detail-details-text">
+      {{ content }}
+    </div>
+    <div class="project-detail-details-extras">
+      <h2>Tags</h2>
+      <p class="project-details-details-tags">
+        {{ page.tags | join: ", "}}
+      </p>
+      <h2>Year</h2>
+      <p>{{ page.date | date: "%Y" }}</p>
+      {% if page.link != null %}
+      <a href="{{ page.link }}" rel="noopener noreferrer" target="_blank">View</a>
+      {% endif %}
+    </div>
   </div>
-  <ul>
-    {% for tag in page.tags %}
-    <li>{{tag}}</li>
-    {% endfor %}
-  </ul>
 </div>
