--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,26 +1,29 @@
-<header class="container navbar">
-  <nav>
+<header class="container">
+  <nav id="navbar" class="navbar">
     <a class="navbar-brand" href="/">
       {% include branding/monogram-bold-short.svg %}
     </a>
-    <ul>
-      {% for item in site.data.navigation %}
-      <li>
-        {% if item.link == page.url %}
-          {% assign current = true %}
-        {% elsif item.link == "/blog/" %}
-          {% assign url_prefix = page.url | slice: 0, 5 %}
-          {% if url_prefix == "/blog" %}
+    <ul class="navbar-right">
+      <div id="navbar-links" class="navbar-links">
+        {% for item in site.data.navigation %}
+        <li>
+          {% if item.link == page.url %}
             {% assign current = true %}
+          {% elsif item.link == "/blog/" %}
+            {% assign url_prefix = page.url | slice: 0, 5 %}
+            {% if url_prefix == "/blog" %}
+              {% assign current = true %}
+            {% endif %}
           {% endif %}
-        {% endif %}
-        <a href="{{ item.link }}" {% if current | default: false %}class="current"{% endif %}>
-          {{ item.name }}
-        </a>
-      </li>
-      {% assign current = false %}
-      {% assign url_prefix = "" %}
-      {% endfor %}
+          <a href="{{ item.link }}" {% if current | default: false %}class="current"{% endif %}>
+            {{ item.name }}
+          </a>
+        </li>
+        {% assign current = false %}
+        {% assign url_prefix = "" %}
+        {% endfor %}
+      </div>
+      <li id="navbar-menu"><a href="javascript:void(0);"><i class="fa fa-bars"></i></a></li>
     </ul>
   </nav>
 </header>
