--- a/_sass/_nav.scss
+++ b/_sass/_nav.scss
@@ -1,16 +1,15 @@
+$navbar-height: 100px;
 $navbar-brand-size: 48px;
 
 .navbar {
   font-family: "DM Sans", sans-serif;
 
-  nav {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-    height: 100px;
-    font-size: 1.25rem;
-  }
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  height: $navbar-height;
+  font-size: 1.25rem;
 
   .navbar-brand {
     height: $navbar-brand-size;
@@ -25,13 +24,23 @@ $navbar-brand-size: 48px;
     }
   }
 
-  ul {
+  .navbar-right {
     display: flex;
     flex-direction: row;
     justify-content: flex-end;
     align-items: center;
     margin: 0;
-
+    .navbar-links {
+      display: flex;
+      flex-direction: row;
+      justify-content: flex-end;
+      align-items: center;
+      margin: 0;
+    }
+    #navbar-menu {
+      display: none;
+    }
+    
     li {
       list-style: none;
       padding-left: 32px;
@@ -53,8 +62,53 @@ $navbar-brand-size: 48px;
       border-bottom-color: $color-tertiary;
     }
   }
+}
 
-  // &.container {
-  //   max-width: 1120px;
-  // }
+@media (max-width: $screen-medium) {
+  .navbar {
+    .navbar-brand {
+      z-index: 2;
+    }
+    .navbar-right {
+      .navbar-links {
+        transition: transform 0.3s ease-in-out;
+        position: absolute;
+        padding-top: $navbar-height;
+        top: -328px;
+        left: -5%;
+        width: 100vw;
+        z-index: 1;
+
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-start;
+        align-items: stretch;
+        
+        background-color: black;
+        font-size: 1.75rem;
+        padding-bottom: 32px;
+        li {
+          padding: 0 32px;
+          a {
+            display: block;
+            width: 100%;
+            &.current, &:hover {
+              opacity: 1;
+            }
+          }
+        }
+        &.active {
+          transform: translateY(328px);
+        }
+      }
+      #navbar-menu {
+        display: block;
+        z-index: 2;
+        .active {
+          opacity: 1;
+          border-bottom-color: $color-tertiary;
+        }
+      }
+    }
+  }
 }
