--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -51,33 +51,30 @@
       }
     }
     </script>
-    {% if page.url == "/" %}
     <!-- Smooth scroll -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script>
-    const getOffsetTop = element => {
-      let offsetTop = 0;
-      while(element) {
-        offsetTop += element.offsetTop;
-        element = element.offsetParent;
-      }
-      return offsetTop;
-    }
-    const link = document.querySelector(".projects-scroll-down");
-    link.addEventListener("click", clickHandler);
-      
-    function clickHandler(e) {
-      e.preventDefault();
-      const href = this.getAttribute("href");
-      const offsetTop = getOffsetTop(document.querySelector(href))
-      console.log(offsetTop)
-      
-      scroll({
-        top: offsetTop,
-        behavior: "smooth"
+    $(document).ready(function(){
+      // Add smooth scrolling to all links
+      $("a").on('click', function(event) {
+        // Make sure this.hash has a value before overriding default behavior
+        if (this.hash !== "") {
+          // Prevent default anchor click behavior
+          event.preventDefault();
+          // Store hash
+          var hash = this.hash;
+          // Using jQuery's animate() method to add smooth page scroll
+          // The optional number (800) specifies the number of milliseconds it takes to scroll to the specified area
+          $('html, body').animate({
+            scrollTop: $(hash).offset().top
+          }, 500, function(){
+            // Add hash (#) to URL when done scrolling (default click behavior)
+            window.location.hash = hash;
+          });
+        } // End if
       });
-    }
+    });
     </script>
-    {% endif %}
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-XPLM0ZWM5V"></script>
     <script>
