responsive project page

--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -7,6 +7,7 @@ layout: default
     <div class="project-detail-details-text">
       {{ content }}
     </div>
+    <div class="gap"></div>
     <div class="project-detail-details-extras">
       <h2>Tags</h2>
       <p class="project-details-details-tags">
