responsive about-profile

--- a/_includes/profile.html
+++ b/_includes/profile.html
@@ -18,5 +18,8 @@
       pad, practicing bodyweight fitness, or trekking the local hiking trails.
     </p>
   </div>
-  <img src="/assets/images/profile-img.png">
+  <div class="gap"></div>
+  <div class="profile-img">
+    <img src="/assets/images/profile-img.png">
+  </div>
 </div>
