--- a/_sass/_about.scss
+++ b/_sass/_about.scss
@@ -1,4 +1,3 @@
-$resume-column-width: ($container-width - 56px) / 3;
 $profile-img-min-width-large: 324px;
 $profile-img-min-width-medium: 280px;
 
@@ -65,18 +64,14 @@ $profile-img-min-width-medium: 280px;
 }
 
 .resume {
-  display: flex;
-  flex-direction: column;
-  flex-wrap: wrap;
-  align-items: space-between;
-  column-gap: 16px;
-  row-gap: 16px;
-  height: 450px;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 16px;
+  margin-bottom: 32px;
 
   .resume-card {
     border-top: 2px solid $color-text-sunken;
     padding-left: 8px;
-    width: $resume-column-width;
     margin: 0;
     .resume-card-header {
       font-family: 'DM Serif Display', serif;
@@ -107,14 +102,34 @@ $profile-img-min-width-medium: 280px;
   }
 }
 
+@media (max-width: $screen-large) {
+  .resume {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+@media (max-width: $screen-medium) {
+  .resume {
+    grid-template-columns: repeat(1, 1fr);
+  }
+}
+
 .about-site {
   width: 50%;
-  padding-left: 8px;
   border-top: 2px solid $color-text-sunken;
-  .about-site-header {
-    font-family: "DM Serif Display", serif;
-    font-size: 2.5rem;
-    margin-bottom: 16px;
+  .about-site-inner {
+    padding-left: 8px;
+    .about-site-header {
+      font-family: "DM Serif Display", serif;
+      font-size: 2.5rem;
+      margin-bottom: 16px;
+    }
+  }
+}
+
+@media (max-width: $screen-large) {
+  .about-site {
+    width: 100%;
   }
 }
 
