add well experience

--- a/_includes/profile.html
+++ b/_includes/profile.html
@@ -5,12 +5,19 @@
     </p>
 
     <p>
-      I currently work as a <strong>Software Developer</strong> at
-      <a href="https://www.novacoast.com/" target="_blank"  rel="noopener
-      noreferrer">Novacoast, Inc.</a>, an IT Professional Services and Product
-      Development company. At Novacoast, I am the lead developer on our internal
-      automation projects, a versatile technical consultant out in the field,
-      and August 2020 Developer of the Month!
+      I currently work as a <strong>Software Engineer</strong> at <a
+      href="https://wellapp.com/" target="_blank" rel="noopener
+      noreferrer">WELL</a>, a patient communication platform for healthcare. At
+      WELL, I work on the Backend Team to deliver core features to our
+      application.
+    </p>
+
+    <p>
+      Previously, I had spent two years at <a href="https://www.novacoast.com/"
+      target="_blank" rel="noopener noreferrer">Novacoast</a> as a
+      <strong>Developer</strong>. I was the lead
+      developer on our internal automation projects and a versatile technical
+      consultant out in the field.
     </p>
 
     <p>
