Updated title and formatting

--- a/_includes/profile.html
+++ b/_includes/profile.html
@@ -1,32 +1,27 @@
 <div class="profile">
   <div class="profile-text">
+    <p>Hi, I'm Ricky Kuang, a software engineer based in Los Angeles, CA.</p>
+
     <p>
-      Hi, I'm Ricky Kuang, a software engineer based in Los Angeles, CA.
+      I currently work as a <strong>Software Engineer</strong> at
+      <a href="https://wellapp.com/" target="_blank" rel="noopener noreferrer">WELL Health</a>, a patient communication
+      platform for healthcare. At WELL, I work on the Backend Team to deliver core features to our application.
     </p>
 
     <p>
-      I currently work as a <strong>Software Engineer</strong> at <a
-      href="https://wellapp.com/" target="_blank" rel="noopener
-      noreferrer">WELL</a>, a patient communication platform for healthcare. At
-      WELL, I work on the Backend Team to deliver core features to our
-      application.
-    </p>
-
-    <p>
-      Previously, I had spent two years at <a href="https://www.novacoast.com/"
-      target="_blank" rel="noopener noreferrer">Novacoast</a> as a
-      <strong>Developer</strong>. I was the lead
-      developer on our internal automation projects and a versatile technical
+      Previously, I had spent two years at
+      <a href="https://www.novacoast.com/" target="_blank" rel="noopener noreferrer">Novacoast</a> as a
+      <strong>Developer</strong>. I was the lead developer on our internal automation projects and a versatile technical
       consultant out in the field.
     </p>
 
     <p>
-      When I'm not in front of a computer, you'll find me doodling in my sketch
-      pad, practicing bodyweight fitness, or trekking the local hiking trails.
+      When I'm not in front of a computer, you'll find me doodling in my sketch pad, practicing bodyweight fitness, or
+      trekking the local hiking trails.
     </p>
   </div>
   <div class="gap"></div>
   <div class="profile-img">
-    <img src="/assets/images/profile-img.png">
+    <img src="/assets/images/profile-img.png" />
   </div>
 </div>
