--- a/_includes/introduction.html
+++ b/_includes/introduction.html
@@ -1,6 +1,6 @@
 <div class="projects-intro">
   <h1 class="projects-intro-header">
-    Ricky&nbsp;Kuang is a software&nbsp;developer living in Los&nbsp;Angeles,&nbsp;CA.
+    Ricky&nbsp;Kuang is a software&nbsp;engineer living in Los&nbsp;Angeles,&nbsp;CA.
   </h1>
   <div class="projects-intro-links">
     <ul class="projects-intro-links-social-media">
